# knots-pipe-internals

./: .gitignore  README.md  pyproject.toml
pipeintlib/: __init__.py  _buildinfo.py  _filesystem.py  _git.py
src/env.bin/: README.md  deploy.env.bin.py
src/env.launchers/: README.md  base.env.py  build.env.launchers.py  create-windows-shortcut.ps1  deploy.env.launchers.py  knots-hub.ps1.bat  knots-hub.wt.bat
src/kloch.profiles/: README.md  deploy.kloch.profiles.py  echoes.yml  knots-dev.yml  knots.yml
src/knots-hub.build/: README.md  build-app-nuitka.py  build-n-deploy.py  run.knots-hub.build.sh
src/knots-hub.config.vendor-installers/: README.md  deploy.knots-hub.vendor-installers.py
src/knots-hub.configs/: README.md  deploy.knots-hub.configs.py  knots-hub.vendor-installers.json
src/knots-hub.launcher/: README.md  create-windows-shortcut.ps1  deploy.knots-hub.launcher.py  src-launcher.bat
src/rez.config/: README.md  deploy.rez.config.py
src/rez.extensions/: README.md  deploy.rez.extensions.py
